--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 beautifulsoup4==4.11.1
 bs4==0.0.1
+cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+google-auth==2.13.0
+google-auth-oauthlib==0.5.3
+greenlet==1.1.3.post0
+gspread==5.6.0
+gspread-dataframe==3.3.0
 html5lib==1.1
 idna==3.4
 lxml==4.9.1
@@ -10,12 +16,19 @@ mysql-connector==2.2.9
 mysql-connector-python==8.0.31
 mysqlclient==2.1.1
 numpy==1.23.4
+oauthlib==3.2.2
 pandas==1.5.0
 protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyMySQL==1.0.2
 python-dateutil==2.8.2
 pytz==2022.4
 requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
 six==1.16.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.42
 urllib3==1.26.12
 webencodings==0.5.1
